add profile and logout

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ fastapi
 uvicorn[standard]
 sqlalchemy
 python-jose[cryptography]
-passlib[bcrypt]
+passlib[argon2]
 python-multipart
 python-dotenv
+psycopg2-binary
