--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+version: "3.9"
+
 services:
   client:
+    context: ./client
     build: ./client
     container_name: client
     ports:
@@ -10,7 +13,11 @@ services:
       - server
     networks:
       - app-network
+    volumes:
+      - ./client:/app
+      - /app/node_modules
   server:
+    context: ./server
     build: ./server
     container_name: server
     ports:
@@ -19,7 +26,27 @@ services:
       - ./server/.env
     networks:
       - app-network
+    volumes:
+      - ./server:/app
+    depends_on:
+      - db
+
+  db:
+    image: postgres:16-alpine
+    container_name: db_social
+    restart: always
+    env_file:
+      - ./server/.env
+    networks:
+      - app-network
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
       
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  postgres_data:
