Add email field to user signup and fix CORS configuration
- Add email field to User model with unique constraint
- Update auth schemas to include email validation
- Add email input to signup form
- Update signup API to handle email field
- Add automatic email column migration on startup
- Fix CORS configuration in SAM template
- Add email-validator dependency

--- a/server/template.yaml
+++ b/server/template.yaml
@@ -27,6 +27,7 @@ Resources:
             Method: ANY
             RestApiId: !Ref SocialFastAPIFunction
             Cors:
-              AllowOrigins:"'https://social.hanumantjain.tech'"
-              AllowMethods: "GET, POST, PUT, DELETE, OPTIONS"
-              AllowHeaders: "*"
+              AllowOrigins: "'https://social.hanumantjain.tech,http://localhost:5173'"
+              AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
+              AllowHeaders: "'*'"
+              AllowCredentials: true
