--- a/server/template.yaml
+++ b/server/template.yaml
@@ -27,7 +27,7 @@ Resources:
             Method: ANY
             RestApiId: !Ref SocialFastAPIFunction
             Cors:
-              AllowOrigins: "'https://social.hanumantjain.tech,http://localhost:5173'"
+              AllowOrigin: "'https://social.hanumantjain.tech'"
               AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
               AllowHeaders: "'*'"
               AllowCredentials: true
