Fix CORS configuration in SAM template
- Move CORS config to Globals section
- Remove unnecessary single quotes from CORS values
- Fix AllowOrigin to include both production and localhost origins

--- a/server/template.yaml
+++ b/server/template.yaml
@@ -25,9 +25,11 @@ Resources:
           Properties:
             Path: /{proxy+}
             Method: ANY
-            RestApiId: !Ref SocialFastAPIFunction
-            Cors:
-              AllowOrigin: "'https://social.hanumantjain.tech'"
-              AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
-              AllowHeaders: "'*'"
-              AllowCredentials: true
+
+Globals:
+  Api:
+    Cors:
+      AllowOrigin: "https://social.hanumantjain.tech,http://localhost:5173"
+      AllowMethods: "GET,POST,PUT,DELETE,OPTIONS"
+      AllowHeaders: "*"
+      AllowCredentials: true
