Add CORS configuration to API Gateway
- Add Globals section with CORS config in SAM template
- Add explicit OPTIONS handler in FastAPI
- Allow all origins, headers, and methods for CORS
- Fix preflight request blocking

--- a/server/template.yaml
+++ b/server/template.yaml
@@ -2,6 +2,13 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: "Social FastAPI Lamda Template"
 
+Globals:
+  Api:
+    Cors:
+      AllowOrigin: "'*'"
+      AllowHeaders: "'*'"
+      AllowMethods: "'*'"
+
 Resources:
   SocialFastAPIFunction:
     Type: AWS::Serverless::Function
