--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.9"
 
 services:
   client:
-    context: ./client
     build: ./client
     container_name: client
     ports:
@@ -17,7 +15,6 @@ services:
       - ./client:/app
       - /app/node_modules
   server:
-    context: ./server
     build: ./server
     container_name: server
     ports:
@@ -35,12 +32,15 @@ services:
     image: postgres:16-alpine
     container_name: db_social
     restart: always
-    env_file:
-      - ./server/.env
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: socialdb
+      PGPORT: 5433
     networks:
       - app-network
     ports:
-      - 5432:5432
+      - 5433:5433
     volumes:
       - postgres_data:/var/lib/postgresql/data
       
