--- a/server/template.yaml
+++ b/server/template.yaml
@@ -32,6 +32,20 @@ Resources:
           ALGORITHM: !Sub "{{resolve:ssm:/socialapp/ALGORITHM}}"
           ACCESS_TOKEN_EXPIRE_MINUTES: !Sub "{{resolve:ssm:/socialapp/ACCESS_TOKEN_EXPIRE_MINUTES}}"
           CORS_ORIGINS: !Sub "{{resolve:ssm:/socialapp/CORS_ORIGINS}}"
+          S3_BUCKET_NAME: !Sub "{{resolve:ssm:/socialapp/S3_BUCKET_NAME}}"
+          AWS_REGION: us-east-1
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+            Action:
+              - s3:PutObject
+              - s3:GetObject
+              - s3:DeleteObject
+              - s3:ListBucket
+        Resource:
+          - !Sub "arn:aws:s3:::${S3_BUCKET_NAME}"
+          - !Sub "arn:aws:s3:::${S3_BUCKET_NAME}/*"
       Events:
         ApiGatewayEvent:
           Type: Api
