--- a/server/template.yaml
+++ b/server/template.yaml
@@ -39,6 +39,7 @@ Resources:
             - Effect: Allow
               Action:
                 - s3:PutObject
+                - s3:PutObjectAcl
                 - s3:GetObject
                 - s3:DeleteObject
                 - s3:ListBucket
