--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 5173:5173
     env_file:
-      - ./client/.env
+      - ./client/.env.development
     depends_on:
       - server
     networks:
