--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://fg5373zzn7.execute-api.us-east-1.amazonaws.com
+VITE_API_URL=https://fg5373zzn7.execute-api.us-east-1.amazonaws.com/Prod
 VITE_GOOGLE_CLIENT_ID=45334456693-oabrbrjba0558tggeknesijpfufjtnah.apps.googleusercontent.com
